# treerun

./: .gitignore  README.md  pyproject.toml  treesub.py
src/dendrun/: main.py
src/treerun/: YAMLutils.py  broadcast.py  dirutils.py  main.py  parser.py
src/treesub/: treesub.py
test/: input.yaml  results  run_test.sh  run_tests.py  test.py  test_setup.yaml  tests.yaml
test/system1/param11/param21/test-1/: run.sh
test/system1/param11/prune_extend/: run.sh
test/system2/param11/: run.sh
test/system2/param11/param22/test-1/eval_system2/: run.sh
test/system2/param11/param23/test-1/: run.sh
test/system2/param12/param21/: run.sh
