[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "dendrun"
dynamic = ["version"]
authors = [
  { name="Viktor Svahn", email="svahnv@gmail.com" },
]
description = "CLI for running teriminal commands from all subdirectories in a tree structure."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Ubuntu",
]

[project.urls]
Homepage = "https://github.com/viktorsvahn/dendrun/"
Issues = "https://github.com/viktorsvahn/dendrun/issues"


[project.scripts]
dendrun = "dendrun.main:main"
